force-app/main/default/objects/Chatter_Bot_Group__c/Chatter_Bot_Group__c.object-meta.xml
<CustomObject>
    <description>Specify Chatter Groups that you want to be notified when they are updated or when someone joins the group.so that you can take actions. A common use case is to send a welcome email or Chatter post to new members of a group. This is a workaround until if or when Salesforce supports CollaborationGroup object in Process Builder.</description>
    <label>Chatter Bot Group</label>
    <nameField>
        <displayFormat>CBG-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chatter Bot Groups</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>