force-app/main/default/objects/Chatter_Bot_Group__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether the Chatter Group and Chatter Group Member triggers create/update/delete Chatter Bot Group Member child records when users join or leave a group.</description>
    <inlineHelpText>Controls whether the Chatter Group and Chatter Group Member triggers create/update/delete Chatter Bot Group Member child records when users join or leave a group.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>