force-app/main/default/objects/Chatter_Bot_Group__c/fields/Banner_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Banner_Photo_URL__c</fullName>
    <label>Banner Photo URL</label>
    <type>Url</type>
</CustomField>