force-app/main/default/objects/Chatter_Bot_Group__c/fields/Can_Have_Guests__c.field-meta.xml
<CustomField>
    <fullName>Can_Have_Guests__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Have Guests?</label>
    <type>Checkbox</type>
</CustomField>