force-app/main/default/objects/Chatter_Bot_Group__c/fields/Chatter_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Group_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>ID of the Chatter Group to monitor.</description>
    <externalId>true</externalId>
    <inlineHelpText>ID of the Chatter Group to monitor.</inlineHelpText>
    <label>Chatter Group ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>