force-app/main/default/objects/Chatter_Bot_Group__c/fields/Collaboration_Type__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Type__c</fullName>
    <label>Collaboration Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>