force-app/main/default/objects/Chatter_Bot_Group__c/fields/Full_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Full_Photo_URL__c</fullName>
    <label>Full Photo URL</label>
    <type>Url</type>
</CustomField>