force-app/main/default/objects/Chatter_Bot_Group__c/fields/Group_Description__c.field-meta.xml
<CustomField>
    <fullName>Group_Description__c</fullName>
    <label>Group Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>