force-app/main/default/objects/Chatter_Bot_Group__c/fields/Group_Email__c.field-meta.xml
<CustomField>
    <fullName>Group_Email__c</fullName>
    <description>The email address for posting Chatter messages to the group.</description>
    <inlineHelpText>The email address for posting Chatter messages to the group.</inlineHelpText>
    <label>Group Email</label>
    <type>Email</type>
</CustomField>