force-app/main/default/objects/Chatter_Bot_Group__c/fields/Group_Owner__c.field-meta.xml
<CustomField>
    <fullName>Group_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Chatter_Bot_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>