force-app/main/default/objects/Chatter_Bot_Group__c/fields/Information_Body__c.field-meta.xml
<CustomField>
    <fullName>Information_Body__c</fullName>
    <label>Information Body</label>
    <length>4000</length>
    <type>Html</type>
</CustomField>