force-app/main/default/objects/Chatter_Bot_Group__c/fields/Information_Title__c.field-meta.xml
<CustomField>
    <fullName>Information_Title__c</fullName>
    <label>Information Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>