force-app/main/default/objects/Chatter_Bot_Group__c/fields/Is_Broadcast__c.field-meta.xml
<CustomField>
    <fullName>Is_Broadcast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Broadcast?</label>
    <type>Checkbox</type>
</CustomField>