force-app/main/default/objects/Chatter_Bot_Group__c/fields/Medium_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Medium_Photo_URL__c</fullName>
    <label>Medium Photo URL</label>
    <type>Url</type>
</CustomField>