force-app/main/default/objects/Chatter_Bot_Group__c/fields/Small_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Small_Photo_URL__c</fullName>
    <label>Small Photo URL</label>
    <type>Url</type>
</CustomField>