force-app/main/default/objects/Chatter_Bot_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Chatter_Group_ID__c</columns>
    <columns>Group_Name__c</columns>
    <columns>Group_Owner__c</columns>
    <columns>Group_Description__c</columns>
    <columns>Member_Count__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>